--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,11 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules+
 
+    compile 'com.facebook.fresco:animated-gif:1.10.0'
+    compile 'com.facebook.fresco:animated-webp:1.10.0'
+    compile 'com.facebook.fresco:webpsupport:1.10.0'
+    compile 'com.facebook.fresco:webpsupport:1.10.0'
+
     implementation "com.google.android.gms:play-services-base:15.0.1"
     implementation "com.google.firebase:firebase-core:16.0.3"
     implementation project(':react-native-firebase')
