--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,10 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         google()
+        maven {
+            url "https://jitpack.io"
+        }
+            
     }
 }
 
