--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+
+    compile project(':@merryjs_react-native-charts')
     compile project(':react-native-svg')
     compile project(':react-native-fbsdk')
     compile project(':react-native-splash-screen')
@@ -160,6 +162,7 @@ dependencies {
     implementation "com.google.firebase:firebase-database:16.0.2"
     // implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
     // implementation project(':react-native-fbsdk')
+
 }
 
 // Run this once to be able to run the application with BUCK
