--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "@merryjs/react-native-charts": "^1.0.0-beta5",
     "d3-shape": "^1.2.2",
+    "immutability-helper": "^2.8.1",
     "react": "^16.5.0",
     "react-native": "^0.57.1",
     "react-native-circular-progress": "^1.0.1",
@@ -21,6 +23,7 @@
     "react-native-storage": "^0.2.2",
     "react-native-svg": "^7.0.3",
     "react-native-svg-charts": "^5.2.0",
+    "react-native-switch": "^1.5.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0",
     "react-redux": "^5.0.7",
